add swagger, delete config google auth

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,7 @@
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_USER=postgres
-DATABASE_PASSWORD=12345
+DATABASE_PASSWORD=Admin
 DATABASE_NAME=diagnostico
-DB_CONNECTION=pgsql
-JWT_SECRET="no utilizar esta palabra en producción"
+JWT_SECRET="no utilizar esta palabra en producción
 DATABASE_SSL="false"
-GOOGLE_CLIENT_ID=962494247433-vtd7uk0gj7a4hjudgn10h06q0p8ddaha.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
-GOOGLE_CALLBACK_URL=http://localhost:3000/api/auth/google/callback
