consultas, publicacion, comentarios incidentes creados (incidentes solo la entidad, falta los servicios y controladores

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ DATABASE_PASSWORD=Admin
 DATABASE_NAME=diagnostico
 JWT_SECRET="no utilizar esta palabra en producción
 DATABASE_SSL="false"
+
+AWS_REGION=us-east-1  # Cambia por tu región
+AWS_ACCESS_KEY_ID=tu_access_key_aqui
+AWS_SECRET_ACCESS_KEY=tu_secret_key_aqui
+AWS_S3_BUCKET_NAME=tu-bucket-name
